syntax = "proto3";

package reachBase;

message AccessRequest {
    string id = 1;
    int64 timestamp = 2;
}

message AccessResponse {
    bool granted = 1;
}

message Thanks {
    string message = 1;
}

service AccessService {
    rpc RequestAccess(AccessRequest) returns (AccessResponse);
    rpc GrantAccess(AccessResponse) returns (Thanks);
}